--- a/comeco1.Rmd
+++ b/comeco1.Rmd
@@ -3,6 +3,11 @@ title: "Community Ecology Basics"
 author: "Nilanjan Chatterjee"
 date: "30 October 2019"
 output: html_document
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ```{r setup, include=FALSE}
